# PIEmaker-predicted-incrementality-by-experiment-

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/ml/: advertiser_cv.py  bootstrap_advertisers.py  feature_ablation.py  holdout_one_level.py  lcc_calibration_by_segment.py  model_registry.py  sample_size_curve.py  train_random_forest.py
backend/pie_formulas/: __init__.py  decision.py  decision_curves.py  evaluation.py  labels.py  model_card_schema.py  paper_to_code_matrix.json  prediction.py  research.py  run_manifest.py
backend/scripts/: generate_demo_csv.py  smoke_phase2.py
backend/services/: cleaning_service.py  decision_service.py  demo_seed_service.py  donor_pool_service.py  drift_service.py  feature_engineering_service.py  label_generation_service.py  mechanical_correlation_defense.py  model_training_service.py  persistence.py  prediction_service.py  schema_mapping.py  simulator_service.py  upload_storage.py  validation_service.py
backend/tests/: test_cleaning_service.py  test_decision_curves.py  test_decision_service.py  test_demo_seed.py  test_donor_pool.py  test_drift_service.py  test_feature_ablation.py  test_feature_engineering.py  test_holdout_one_level.py  test_label_generation.py  test_mc_defense.py  test_model_registry.py  test_oof_evaluation.py  test_pie_formulas.py  test_pie_upload_schema.py  test_portfolio_scoring.py  test_prediction_service.py  test_schema_mapping.py  test_simulator_service.py  test_train_random_forest.py  (+4 more)
(+66 files in other folders)
